--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "brio-test",
-  "version": "0.0.1",
+  "name": "todo",
+  "version": "1.0.0",
   "description": "",
   "author": "",
   "private": true,
@@ -21,23 +21,24 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^6.10.1",
-    "@nestjs/core": "^6.10.1",
-    "@nestjs/platform-express": "^6.10.1",
-    "@nestjs/swagger": "^4.8.2",
-    "@typegoose/typegoose": "^6.1.5",
-    "moment": "^2.29.1",
-    "mongoose": "^5.7.12",
-    "nestjs-typegoose": "^7.1.38",
+    "@nestjs/common": "^8.2.6",
+    "@nestjs/config": "^1.1.6",
+    "@nestjs/core": "^8.2.6",
+    "@nestjs/mongoose": "^9.0.2",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.0",
+    "@typegoose/typegoose": "^9.5.0",
+    "class-validator": "^0.13.2",
+    "mongoose": "^6.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.0.0",
+    "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^6.0.0",
-    "@nestjs/schematics": "^6.0.0",
-    "@nestjs/testing": "^6.0.0",
+    "@nestjs/cli": "^8.0.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/mongoose": "^5.11.97",
@@ -56,7 +57,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^3.4.5"
+    "typescript": "^4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
